[package]
name = "hello_actix"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "8.1" 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
futures = "0.3"
actix-web = "4"
log = "0.4"
env_logger = "0.10"
mongodb = "2.0"
bson = "2.0"
tokio = { version = "1", features = ["full"] }
